# InfraredNUC

./: README.md  simulation_data1.m
cppCode/: CMakeLists.txt
cppCode/include/: admm_algorithm.hpp  image_processing.hpp  lra_svd_denoising.hpp
cppCode/src/: admm_algorithm.cpp  image_processing.cpp  lra_svd_denoising.cpp  main.cpp
matlabCode/: README.md  test1.m
matlabCode/Functions/: admmAlgorithm.m  defDivergence.m  defGradX.m  defGradY.m  divergenceXY.m  forwardDiffX.m  forwardDiffY.m  getFreqCoeff.m  lraSvdDenoising.m
metrics/: calculateAVGE.m  calculateICV.m  calculateMRD.m  calculateMSE.m  calculatePSNR.m  calculateRoughness.m  calculateSSIM.m  log.txt  main.m  mainSingImg.m
